fix 4 byte reading, make releasable